@@ -22,7 +22,7 @@ nice as old ones.
 What is the difference between hand-work and machine work, and what
 has caused it?  How can we improve the situation?  This essay explains
 problems in music notation (software), and our approach to solving
-them.  Start reading <a href=introduction.html>here</a>.
+them.  It starts <a href=introduction.html>here</a>.
 
 
 
@@ -31,17 +31,30 @@ them.  Start reading <a href=introduction.html>here</a>.
 <h2>Table of contents</h2>
 
 <ul>
-<li><a href=introduction.html>Introduction</a>
-<li><a href=software.html>Software</a>
-<li><a href=problem-statement.html>Problem statement</a>
+<li><a href=introduction.html>Introduction</a>: what's wrong with
+computer music notation 
+<li><a href=software.html>What's wrong with software</a>, or how
+Finale is not the end-all of music software.
 
-<li><a href=implementing-notation.html>Implementing notation</a>
-<li><a href=engraving.html>Engraving</a>
-<li><a href=implementing-typography.html>Implementing typography</a>
-<li><a href=formatting-architecture.html>Formatting architecture</a>
-<li><a href=benchmarking.html>Benchmarking</a>
-<li><a href=typography-features.html>Typography features</a>
-<li><a href=input-format.html>Input format</a>
+<li><a href=problem-statement.html>A better approach</a> to music printing.
+
+<li>
+ <a href=implementing-notation.html>Impressive, but does it also
+work in theory</a>? A practical approach to capturing notation.
+<li><a href=engraving.html>Music engraving</a>, the art of printing
+music.
+
+<li><a href=implementing-typography.html>Implementing typography</a>:
+hackers attack the engraving problem.
+<li><a href=formatting-architecture.html>A flexible program
+architecture</a> lets us write engraving software 
+
+<li><a href=benchmarking.html>Notation benchmarking</a>: is a flexible
+architecture enough?
+<li><a href=typography-features.html>Typographical features</a> unique
+to LilyPond.
+
+<li><a href=input-format.html>Input format</a>: how to enter music. 
 <li><a href=conclusion.html>Conclusion</a>
 </a>
 
