@@ -1,4 +1,12 @@
 
 These pages contain some unedited stuff on general music notation
 topics.
-  
+
+<ul>
+<li><a href=accidentals.html>rules for accidentals</a>
+<li><a href="appogiatura.html"> about appogiatura</a>
+<li><a href=bassocontinuo.html> figured bass</a>
+<li><a href=colors.html>about color</a>
+<li><a href=colors.html>about color</a>
+index.html
+ligature.html
