@@ -31,31 +31,12 @@
       Sid
     </td>
     <td>
-      <b>run</b> <tt>apt-get install lilypond lilypond-doc</tt>
+      <b>Run</b> <tt>apt-get install lilypond lilypond-doc</tt>
     </td>
-    <td>1.7.29</td>
+    <td>1.8.0</td>
     <td>Anthony Fok</td>
   </tr>
 
-  <tr>
-<td><p align=center><img src=http://www.debian.org/logos/openlogo-nd-50.png></td>
-    <td>
-      Debian/i386 
-    </td>
-    <td>
-      Sid
-    </td>
-    <td><b>Download
-	<a href="http://www.pedrokroeger.net/lilypond/lilypond_1.8.0-1_i386.deb">
-	  lilypond</a>,
-	<a href="http://www.pedrokroeger.net/lilypond/lilypond-doc_1.8.0-1_all.deb">documentation</a></b>
-    </td>
-    <td>1.8.0</td>  
-    <td>
-      <a href="mailto:kroegerlistas@pedrokroeger.net">
-	Pedro Kroeger</a></td>
-  </tr>
-  
   <tr>
 <td><p align=center><img src=@IMAGES@redhat-logo.png></td>
     <td>
@@ -65,13 +46,13 @@
       9
     </td>
     <td><b>Download 
-	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.8.0-1.i386.rpm">lilypond</a>,
+	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.8.1-1.i386.rpm">lilypond</a>,
 	
 	<a
-	href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.8.0-1.i386.rpm">documentation</a></b>
+	href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.8.1-1.i386.rpm">documentation</a></b>
 	(<a href="#redhat-notes">NOTE</a>)
     </td>
-    <td>1.8.0</td>  
+    <td>1.8.1</td>  
     <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
   </tr>
   
@@ -88,10 +69,50 @@
 		  href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">
 	  Planet CCRMA</a></b>
     </td>
-    <td>1.6.11</td>
-    <td>PlanetCCRMA</td>
+    <td>1.8.0</td>
+    <td>
+<a href="mailto:planetccrma@ccrma.stanford.edu">
+    PlanetCCRMA</a></td>
   </tr>
+
+  
+
+  
+  <tr>
+  <td><p align=center><img src="@IMAGES@mandrake-logo.jpeg"></td>
+    <td>
+      Mandrake/i386 
+    </td>
+    <td>
+      9.1
+    </td>
+    <td>
+      <b>Go to <a href="http://rpm.nyvalls.se/sound9.1.html">
+	  Thac's RPMs for mandrake</a></b>
+    </td>
+    <td>1.8.0</td>
+    <td>Thac's RPMs for Mandrake</td>
+  </tr>
+
     
+  <tr>
+  <td><p align=center><img src="@IMAGES@macosx.jpeg"></td>
+    <td>
+      MacOS X (Fink)
+    </td>
+    <td>
+      <tt>current-unstable</tt>
+    </td>
+    <td>
+      <b>  Go <a href="macos.html">here</a></b>
+    </td>
+    <td>1.8.0</td>  
+    <td>
+<a href="mailto:neeracherATmacDOTcom>">Matthias Neeracher</a>
+    </td> 
+  </tr>
+
+          
   <tr>
   <td><p align=center><img src="@IMAGES@windows.png"></td>
     <td>
@@ -116,22 +137,25 @@
 <td>Source</td><td></td>
 <td><b>Download 
 <a
-href="ftp://ftp.lilypond.org/pub/LilyPond/v1.8/lilypond-1.8.0.tar.gz">tarball</a>
+href="ftp://ftp.lilypond.org/pub/LilyPond/v1.8/lilypond-1.8.1.tar.gz">tarball</a>
 (<a href="../devel/#warning">warning</a>)
 </td>
 <td>
-1.8.0
+1.8.1
 </td>
+   <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
+   team</a></td>
+
 </tr>
   
 </table>
 
-<h2>Download LilyPond 1.7</h2>
+<h2>Download LilyPond 1.9</h2>
 
-The 1.7 series are development releases; use 1.8 if available.
+The 1.9 series are development releases; use 1.8 if available.
 
-<a name=1.8></a>
-<table border="0" rules="rows" cellpadding="3">
+<a name=1.9></a>
+<table width="100%" border="0" rules="rows" cellpadding="3">
 
 
   <!-- use this as template for new entry !-->
@@ -144,24 +168,61 @@ The 1.7 series are development releases; use 1.8 if available.
     <th>Packager</th>
   </tr>
   
+  <tr>
+
+  <td><p align=center><img
+src="http://www.debian.org/logos/openlogo-nd-50.png">
+</td>
+
+    <td>
+      Debian/i386
+    </td>
+    <td>
+      Sid
+    </td>
+    <td>
+<b> go    <a href="http://www.pedrokroeger.net/lilypond/">here</a></b>
+    </td>
+    <td>1.9.0</td>
+    <td><a href="mailto:kroegerlistasATpedrokroegerDOTnet">
+    Pedro Kroeger</td>
+  </tr>
+
+  <tr>
+<td><p align=center><img src=@IMAGES@redhat-logo.png></td>
+    <td>
+      RedHat/i386 
+    </td>
+    <td>
+      9
+    </td>
+    <td><b>Download 
+	<a href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-1.9.1-1.i386.rpm">lilypond</a>,
+	
+	<a
+	href="ftp://ftp.lilypond.org/pub/LilyPond/binaries/RedHat-9/lilypond-documentation-1.9.1-1.i386.rpm">documentation</a></b>
+	(<a href="#redhat-notes">NOTE</a>)
+    </td>
+    <td>1.9.1</td>  
+    <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development team</a></td>
+  </tr>
 
   
   <tr>
-  <td><p align=center><img src="@IMAGES@mandrake-logo.jpeg"></td>
-    <td>
-      Mandrake/i386 
-    </td>
-    <td>
-      9.1
-    </td>
-    <td>
-      <b>Go to <a href="http://rpm.nyvalls.se/sound9.1.html">
-	  Thac's RPMs for mandrake</a></b>
-    </td>
-    <td>1.7.23</td>
-    <td>Thac's RPMs for Mandrake</td>
-  </tr>
-  
+<td></td>
+<td>Source</td><td></td>
+<td><b>Download 
+<a
+href="ftp://ftp.lilypond.org/pub/LilyPond/v1.9/lilypond-1.9.1.tar.gz">tarball</a>
+(<a href="../devel/#warning">warning</a>)
+</td>
+<td>
+1.9.1
+</td>
+   <td><a href="mailto:bug-lilypond@gnu.org">LilyPond development
+   team</a></td>
+   
+</tr>
 
 </table>
 
@@ -214,7 +275,7 @@ The 1.7 series are development releases; use 1.8 if available.
 	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond_1.6.9-1_i386.deb">
 	  lilypond</a>,
 	<a
-	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond-doc_1.6.9-1_i386.deb">
+	   href="http://serpent.laymusic.org/~lconrad/lilypond/lilypond-doc_1.6.9-1_all.deb">
 	  documentation</a></b>
     </td>
     <td>1.6.9</td>
@@ -257,6 +318,22 @@ The 1.7 series are development releases; use 1.8 if available.
     <td>SuSE Gmbh.</td>
   </tr>
 
+  <tr>
+  <td><p align=center><img src="@IMAGES@slackware-logo.png"></td>
+    <td>
+      Slackware 
+    </td>
+    <td>
+      ?
+    </td>
+    <td>
+      <b>Download <a href="http://www.slackwarepackages.kit.net/lilypond-1.6.11-i386-1.tgz">here</a></b>
+    </td>
+    <td>1.6.11</td>
+    <td><a href="mailto:hoffmannATuninetDOTcomDOTbr">Ricardo Hoffmann</a></td>
+  </tr>
+
+  
   <tr>
   <td><p align=center><img src="@IMAGES@windows.png"></td>
     <td>
@@ -321,8 +398,8 @@ href="ftp://ftp.lilypond.org/pub/LilyPond/v1.6/lilypond-1.6.12.tar.gz">tarball</
 
 <h3>RedHat-9</h3>
 
-LilyPond 1.8 requires guile-1.6.4-7 or better from
-<a href=ftp://ftp.redhat.com/pub/redhat/linux/rawhide/i386/RedHat/RPMS/>
+LilyPond 1.8 requires guile-1.6.4-8 better from <a
+href=ftp://ftp.redhat.com/pub/redhat/linux/rawhide/i386/RedHat/RPMS/>
 Rawhide</a>.
 
 
