@@ -1,5 +1,47 @@
 
 <dl>  
+
+  <dt>
+    August 18, 2003
+  </dt>
+  <dd>
+
+   PlanetCCRMA (eg. RedHat 8 and 9)
+  has been updated to 1.8.
+  Download <a href="http://www-ccrma.stanford.edu/planetccrma/software/soundapps.html#lilypond">here.</a>
+</dd>
+
+
+  <dt>
+    August 7, 2003
+  </dt>
+  <dd>
+
+  LilyPond 1.8 is released.  Read <a
+href="http://lilypond.org/doc/v1.8/Documentation/topdocs/out-www/NEWS.html">the
+release notes</a> and get it <a href="download/">here</a>.  
+    
+  </dd>
+
+
+
+
+
+  <dt>
+    August 7, 2003
+  </dt>
+  <dd>
+    New website went live!
+  </dd>
+
+
+  <dt>
+    August 6, 2003
+  </dt>
+  <dd>
+    Announced new website.
+  </dd>
+
   <dt>
     August 1, 2003
   </dt>
@@ -10,7 +52,7 @@
     July 30, 2003
   </dt>
   <dd>
-    Website: present <a href=background/introduction.html>treatise</a>
+    Website: present <a href=about/automated-engraving/index.html>treatise</a>
     about music engraving, music printing software, and LilyPond's
     unique faculties.
   </dd>
