@@ -1,3 +1,13 @@
+2003-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/about/automated-engraving/index.html: spice up toc.
+
+	* site/download/index.html (href): add slackware download.
+
+2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* site/index.html (href): add planetccrma news.
+
 2003-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/devel/packaging.html: Update.
